--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,12 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Img to PDF</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Image to PDF</h1>
+  <h1>图片文字识别</h1>
   <form action="/upload" method="POST" enctype="multipart/form-data">
     <input type="file" name="avater"></input>
-    <button type="submit">Convet to PDF</button>
+    <button type="submit">开始识别</button>
   </form>
 </body>
 </html>
